--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php-amqplib/php-amqplib": "^2.0"
+        "php-amqplib/php-amqplib": "^2.9.0",
+        "vlucas/phpdotenv": "^5.5@dev"
     }
 }
