change nginx config to resolve duplicated requests

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,7 @@
 server {
-    listen 0.0.0.0:80;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    index index.php;
     root /var/www/html;
 
     add_header X-Frame-Options "SAMEORIGIN";
@@ -12,10 +14,17 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
+    }
+
+    location ~ /\.(?!well-known).* {
+        deny all;
     }
 }
