added xdebug installation dockerfile

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -6,5 +6,8 @@ RUN apt-get update && \
     apt-get install libzip-dev -y && \
     docker-php-ext-install zip sockets bcmath
 
+RUN pecl install xdebug-3.1.5 && \
+    docker-php-ext-enable xdebug
+
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
