--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,15 @@ services:
     build:
       context: .
       dockerfile: php/Dockerfile
+    extra_hosts:
+      - host.docker.internal:host-gateway
     networks:
       - rabbit_network
     volumes:
       - .:/var/www/html/
       - ./logs/php.log:/var/log/fpm-php.www.log
+      - ./php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ./php/conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
     environment:
       - PHP_USER_ID=1000  # Defina o ID do usuário desejado
 
@@ -44,4 +48,5 @@ services:
 
 networks:
   rabbit_network:
-    driver: bridge
+    external:
+      name: rabbit_network_external
