migrating to clean arch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,28 +3,28 @@ services:
   nginx:
     build:
       context: .
-      dockerfile: nginx/Dockerfile
+      dockerfile: docker/nginx/Dockerfile
     ports:
       - "8086:80"
     networks:
       - rabbit_network
     volumes:
       - .:/var/www/html/
-      - ./logs/nginx:/var/log/nginx/
+      - ./docker/logs/nginx:/var/log/nginx/
 
   php:
     build:
       context: .
-      dockerfile: php/Dockerfile
+      dockerfile: docker/php/Dockerfile
     extra_hosts:
       - host.docker.internal:host-gateway
     networks:
       - rabbit_network
     volumes:
       - .:/var/www/html/
-      - ./logs/php.log:/var/log/fpm-php.www.log
-      - ./php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-      - ./php/conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
+      - ./docker/logs/php.log:/var/log/fpm-php.www.log
+      - ./docker/php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ./docker/php/conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
     environment:
       - PHP_USER_ID=1000  # Defina o ID do usuário desejado
 
