--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,10 @@
     "require": {
         "php-amqplib/php-amqplib": "^2.9.0",
         "vlucas/phpdotenv": "^5.5@dev",
-        "ramsey/uuid": "^4.2"
+        "ramsey/uuid": "^4.2",
+        "php-di/php-di": "^7.0@beta"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9.6.13"
     }
 }
