--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
+    server_name localhost
     index index.php;
     root /var/www/html;
 
