--- a/docker/php/conf.d/xdebug.ini
+++ b/docker/php/conf.d/xdebug.ini
@@ -1,7 +1,7 @@
 zend_extension=xdebug
 
-[xdebug]
-xdebug.mode=debug
+xdebug.mode=develop,debug
+xdebug.start_with_request=yes
 xdebug.client_host=host.docker.internal
 xdebug.discover_client_host=0
-xdebug.start_with_request=yes
+xdebug.cli_color=1
