--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-QUEUE_USER="guest"
-QUEUE_PASSWORD="guest"
+RABBIT_USER="guest"
+RABBIT_PASSWORD="guest"
+
+RABBIT_HOST="rabbitmq"
+RABBIT_PORT="5672"
+RABBIT_MAIL_QUEUE="mail.queue"
+RABBIT_MAIL_EXCHANGE="mail.exchange"
+RABBIT_MAIL_ROUTING_KEY="mail"
